--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,19 +5,41 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Costinas_Vlad_Lab2"
         mc:Ignorable="d"
-        Title="Pizzeria Colosseo" Height="450" Width="800" ResizeMode="NoResize" Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}">
+        Title="Pizzeria Colosseo" Height="567.117" Width="913.178" ResizeMode="NoResize" Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}">
     <Grid>
         <Label x:Name="lblTitle" Content="Pizza - Bake &amp; Sale" HorizontalAlignment="Center" Margin="0,28,0,0" VerticalAlignment="Top" FontSize="24" FontWeight="Bold" RenderTransformOrigin="1.003,0.478"/>
-        <GroupBox x:Name="gbPizza" Header="Pizza Type" HorizontalAlignment="Left" Height="126" Margin="39,82,0,0" VerticalAlignment="Top" Width="707" FontWeight="Bold">
-            <Canvas HorizontalAlignment="Left" Height="125" Margin="-10,-21,-2,-1" VerticalAlignment="Top" Width="707">
-                <Label x:Name="lblMargheritaPizza" Content="Margherita Pizza" RenderTransformOrigin="2.113,2.191" Canvas.Left="10" Canvas.Top="36"/>
-                <TextBox x:Name="txtMargheritaPizza" Height="23" TextWrapping="Wrap" Text="0" Width="120" TextAlignment="Right" IsReadOnly="True" Canvas.Left="120" Canvas.Top="36" RenderTransformOrigin="0.536,0.488"/>
-                <Label x:Name="lblPepperoniPizza" Content="Pepperoni Pizza" Canvas.Left="10" Canvas.Top="77"/>
-                <TextBox x:Name="txtPepperoniPizza" Height="23" Canvas.Left="120" TextWrapping="Wrap" Text="0" Canvas.Top="77" Width="120" TextAlignment="Right" IsReadOnly="True"/>
-                <Label x:Name="lblVeggiePizza" Content="Veggie Pizza" Canvas.Left="300" Canvas.Top="36"/>
-                <TextBox x:Name="txtVeggiePizza" Height="23" Canvas.Left="386" TextWrapping="Wrap" Text="0" Canvas.Top="36" Width="120" IsReadOnly="True" TextAlignment="Right"/>
+        <GroupBox x:Name="gbPizza" Header="Pizza Type" HorizontalAlignment="Center" Height="126" Margin="0,82,0,0" VerticalAlignment="Top" Width="800" FontWeight="Bold" HorizontalContentAlignment="Center">
+            <Canvas HorizontalAlignment="Center" Height="125" Margin="0,-21,-2,-1" VerticalAlignment="Top" Width="800">
+                <Label x:Name="lblMargheritaPizza" Content="Margherita Pizza" RenderTransformOrigin="2.113,2.191" Canvas.Left="10" Canvas.Top="36" FontWeight="Normal"/>
+                <TextBox x:Name="txtMargheritaPizza" Height="23" TextWrapping="Wrap" Text="0" Width="120" TextAlignment="Right" IsReadOnly="True" Canvas.Left="120" Canvas.Top="36" RenderTransformOrigin="0.536,0.488" FontWeight="Normal"/>
+                <Label x:Name="lblPepperoniPizza" Content="Pepperoni Pizza" Canvas.Left="10" Canvas.Top="77" FontWeight="Normal"/>
+                <TextBox x:Name="txtPepperoniPizza" Height="23" Canvas.Left="120" TextWrapping="Wrap" Text="0" Canvas.Top="77" Width="120" TextAlignment="Right" IsReadOnly="True" FontWeight="Normal"/>
+                <Label x:Name="lblVeggiePizza" Content="Veggie Pizza" Canvas.Left="331" Canvas.Top="33" FontWeight="Normal"/>
+                <TextBox x:Name="txtVeggiePizza" Height="23" Canvas.Left="421" TextWrapping="Wrap" Text="0" Canvas.Top="36" Width="120" IsReadOnly="True" TextAlignment="Right" FontWeight="Normal"/>
+                <Label x:Name="lblQuatroPizza" Content="Quattro Stagioni Pizza" Canvas.Left="280" Canvas.Top="77" FontWeight="Normal"/>
+                <TextBox x:Name="txtQuatroPizza" Height="23" Canvas.Left="421" TextWrapping="Wrap" Text="0" Canvas.Top="77" Width="120" IsReadOnly="True" TextAlignment="Right" FontWeight="Normal"/>
+                <Label x:Name="lblCanibalePizza" Content="Canibale Pizza" Canvas.Left="569" Canvas.Top="36" FontWeight="Normal"/>
+                <TextBox x:Name="txtCanibalePizza" Height="23" Canvas.Left="678" TextWrapping="Wrap" Text="0" Canvas.Top="36" Width="120" IsReadOnly="True" TextAlignment="Right" FontWeight="Normal"/>
+
             </Canvas>
         </GroupBox>
+        <GroupBox x:Name="gbSale" Header="Current Sale" HorizontalAlignment="Center" Height="259" Margin="53,238,53,0" VerticalAlignment="Top" Width="800" FontWeight="Bold" FontSize="12">
+            <Canvas HorizontalAlignment="Center" Height="290" Margin="0,-27,0,-5" VerticalAlignment="Top" Width="800">
+                <Label x:Name="lblQuantity" Content="Quantity" Canvas.Left="10" Canvas.Top="37" FontWeight="Normal"/>
+                <TextBox x:Name="txtQuantity" Height="23" Canvas.Left="74" TextWrapping="Wrap" Text="0" Canvas.Top="37" Width="120" TextAlignment="Right" FontWeight="Normal"/>
+                <Label x:Name="lblType" Content="Type" Canvas.Left="284" Canvas.Top="37" FontWeight="Normal"/>
+                <ComboBox x:Name="cmbType" Canvas.Left="326" Canvas.Top="37" Width="120"/>
+                <Label x:Name="lblPrice" Content="Price" Canvas.Left="470" Canvas.Top="37" FontWeight="Normal"/>
+                <TextBox x:Name="txtPrice" Height="23" Canvas.Left="513" TextWrapping="Wrap" Text="0" Canvas.Top="37" Width="120" TextAlignment="Right" IsReadOnly="True" FontWeight="Normal"/>
+                <ListBox x:Name="lstSale" Height="132" Canvas.Left="21" Canvas.Top="76" Width="612"/>
+                <Label x:Name="lblTotal" Content="Total" Canvas.Left="468" Canvas.Top="236"/>
+                <TextBox x:Name="txtTotal" Height="23" Canvas.Left="513" TextWrapping="Wrap" Text="0" Canvas.Top="236" Width="120" IsReadOnly="True" TextAlignment="Right"/>
+                <Button x:Name="btnAddToSale" Content="Add To Sale" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Canvas.Left="681" Canvas.Top="154"/>
+                <Button x:Name="btnRemoveItem" Content="Remove Item" Canvas.Left="681" Canvas.Top="188" Width="75" FontWeight="Normal"/>
+                <Button x:Name="btnCheckOut" Content="Check Out" Canvas.Left="681" Canvas.Top="221" Width="75" FontWeight="Bold" Height="38"/>
+            </Canvas>
+        </GroupBox>
+
 
 
     </Grid>
