--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -34,12 +34,27 @@
                 <ListBox x:Name="lstSale" Height="132" Canvas.Left="21" Canvas.Top="76" Width="612"/>
                 <Label x:Name="lblTotal" Content="Total" Canvas.Left="468" Canvas.Top="236"/>
                 <TextBox x:Name="txtTotal" Height="23" Canvas.Left="513" TextWrapping="Wrap" Text="0" Canvas.Top="236" Width="120" IsReadOnly="True" TextAlignment="Right"/>
-                <Button x:Name="btnAddToSale" Content="Add To Sale" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Canvas.Left="681" Canvas.Top="154"/>
+                <Button x:Name="btnAddToSale" Content="Add To Sale" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Canvas.Left="681" Canvas.Top="154" FontWeight="Normal"/>
                 <Button x:Name="btnRemoveItem" Content="Remove Item" Canvas.Left="681" Canvas.Top="188" Width="75" FontWeight="Normal"/>
                 <Button x:Name="btnCheckOut" Content="Check Out" Canvas.Left="681" Canvas.Top="221" Width="75" FontWeight="Bold" Height="38"/>
             </Canvas>
         </GroupBox>
-
+        <Menu x:Name="mnuMain" HorizontalAlignment="Left" Height="19" VerticalAlignment="Top"
+Width="81">
+            <MenuItem Header="File">
+                <MenuItem Header="Exit"/>
+            </MenuItem>
+            <MenuItem Header="Pizza">
+                <MenuItem Header="Make">
+                    <MenuItem x:Name="margPizzaMenuItem" Header="Margherita Pizza"/>
+                    <MenuItem x:Name="pepPizzaMenuItem" Header="Pepperoni Pizza"/>
+                    <MenuItem x:Name="vegPizzaMenuItem" Header="Veggie Pizza"/>
+                    <MenuItem x:Name="quatPizzaMenuItem" Header="Quattro Stagioni Pizza"/>
+                    <MenuItem x:Name="canPizzaMenuItem" Header="Canibale Pizza"/>
+                </MenuItem>
+                <MenuItem Header="Stop"/>
+            </MenuItem>
+        </Menu>
 
 
     </Grid>
