--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -4,9 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Costinas_Vlad_Lab2"
+        xmlns:CustomCommands="clr-namespace:Costinas_Vlad_Lab2.CustomCommands"
         mc:Ignorable="d"
-        Title="Pizzeria Colosseo" Height="567.117" Width="913.178" ResizeMode="NoResize" Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}">
-    <Grid>
+        Title="Pizzeria Colosseo" Height="567.117" Width="913.178" ResizeMode="NoResize" Background="{DynamicResource {x:Static SystemColors.InfoBrushKey}}" Loaded="frmMain_Loaded">
+    <Grid MenuItem.Click="PizzaItemsShow_Click">
         <Label x:Name="lblTitle" Content="Pizza - Bake &amp; Sale" HorizontalAlignment="Center" Margin="0,28,0,0" VerticalAlignment="Top" FontSize="24" FontWeight="Bold" RenderTransformOrigin="1.003,0.478"/>
         <GroupBox x:Name="gbPizza" Header="Pizza Type" HorizontalAlignment="Center" Height="126" Margin="0,82,0,0" VerticalAlignment="Top" Width="800" FontWeight="Bold" HorizontalContentAlignment="Center">
             <Canvas HorizontalAlignment="Center" Height="125" Margin="0,-21,-2,-1" VerticalAlignment="Top" Width="800">
@@ -34,25 +35,26 @@
                 <ListBox x:Name="lstSale" Height="132" Canvas.Left="21" Canvas.Top="76" Width="612"/>
                 <Label x:Name="lblTotal" Content="Total" Canvas.Left="468" Canvas.Top="236"/>
                 <TextBox x:Name="txtTotal" Height="23" Canvas.Left="513" TextWrapping="Wrap" Text="0" Canvas.Top="236" Width="120" IsReadOnly="True" TextAlignment="Right"/>
-                <Button x:Name="btnAddToSale" Content="Add To Sale" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Canvas.Left="681" Canvas.Top="154" FontWeight="Normal"/>
-                <Button x:Name="btnRemoveItem" Content="Remove Item" Canvas.Left="681" Canvas.Top="188" Width="75" FontWeight="Normal"/>
-                <Button x:Name="btnCheckOut" Content="Check Out" Canvas.Left="681" Canvas.Top="221" Width="75" FontWeight="Bold" Height="38"/>
+                <Button x:Name="btnAddToSale" Content="Add To Sale" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Canvas.Left="681" Canvas.Top="154" FontWeight="Normal" Click="btnAddToSale_Click"/>
+                <Button x:Name="btnRemoveItem" Content="Remove Item" Canvas.Left="681" Canvas.Top="188" Width="75" FontWeight="Normal" Click="btnRemoveItem_Click"/>
+                <Button x:Name="btnCheckOut" Content="Check Out" Canvas.Left="681" Canvas.Top="221" Width="75" FontWeight="Bold" Height="38" Click="btnCheckOut_Click"/>
             </Canvas>
         </GroupBox>
-        <Menu x:Name="mnuMain" HorizontalAlignment="Left" Height="19" VerticalAlignment="Top"
-Width="81">
+        <Menu x:Name="mnuMain" HorizontalAlignment="Left" Height="19" VerticalAlignment="Top" Width="81">
             <MenuItem Header="File">
                 <MenuItem Header="Exit"/>
             </MenuItem>
-            <MenuItem Header="Pizza">
+            <MenuItem Header="Pizza" Loaded="frmMain_Loaded">
                 <MenuItem Header="Make">
-                    <MenuItem x:Name="margPizzaMenuItem" Header="Margherita Pizza"/>
-                    <MenuItem x:Name="pepPizzaMenuItem" Header="Pepperoni Pizza"/>
-                    <MenuItem x:Name="vegPizzaMenuItem" Header="Veggie Pizza"/>
-                    <MenuItem x:Name="quatPizzaMenuItem" Header="Quattro Stagioni Pizza"/>
-                    <MenuItem x:Name="canPizzaMenuItem" Header="Canibale Pizza"/>
+                    <MenuItem x:Name="margPizzaMenuItem" Header="Margherita Pizza" Click="margPizzaMenuItem_Click" IsCheckable="True"/>
+                    <MenuItem x:Name="pepPizzaMenuItem" Header="Pepperoni Pizza" Click="pepPizzaMenuItem_Click" IsCheckable="True"/>
+                    <MenuItem x:Name="vegPizzaMenuItem" Header="Veggie Pizza" Click="vegPizzaMenuItem_Click" IsCheckable="True"/>
+                    <MenuItem x:Name="quatPizzaMenuItem" Header="Quattro Stagioni Pizza" Click="quatPizzaMenuItem_Click" IsCheckable="True"/>
+                    <MenuItem x:Name="canPizzaMenuItem" Header="Canibale Pizza" Click="canPizzaMenuItem_Click" IsCheckable="True"/>
                 </MenuItem>
-                <MenuItem Header="Stop"/>
+                <MenuItem Header="Stop" x:Name="mnuStop" Click="stopMenuItem_Click"
+                          InputGestureText="Ctrl+S" Command="CustomCommands:StopCommand.Launch"/>
+                <MenuItem Header="Inventory" Command="ApplicationCommands.Print"/>
             </MenuItem>
         </Menu>
 
